[gd_scene load_steps=4 format=3 uid="uid://bok2v0j6710h7"]

[ext_resource type="Script" path="res://Scripts/Configuraciones.gd" id="1_tfbnh"]
[ext_resource type="FontFile" uid="uid://baqiqr1v2ymuf" path="res://Resources/Fuente/VCR_OSD_MONO_1.001.ttf" id="2_nslhc"]
[ext_resource type="AudioStream" uid="uid://bdes372fr4dni" path="res://Resources/Music/y2mate.com - File Select  Sonic the Hedgehog 3 OST.mp3" id="3_padof"]

[node name="Configuraciones" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfbnh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Video" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_nslhc")
theme_override_font_sizes/font_size = 60
text = "Video"
flat = true

[node name="Audio" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_nslhc")
theme_override_font_sizes/font_size = 60
text = "Audio"
flat = true

[node name="Volver" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.313726, 0.247059, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_nslhc")
theme_override_font_sizes/font_size = 60
text = "Menu"
flat = true

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -218.0
offset_right = -167.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_nslhc")
text = "FullScreen"

[node name="Window" type="Label" parent="Video/HBoxContainer/Labels"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_nslhc")
text = "Window"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
texture_filter = 5
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_nslhc")
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
texture_filter = 1
layout_mode = 2

[node name="Window" type="CheckBox" parent="Video/HBoxContainer/Checks"]
texture_filter = 1
layout_mode = 2

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
texture_filter = 1
layout_mode = 2

[node name="VolverVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 53.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_nslhc")
theme_override_font_sizes/font_size = 60
text = "Volver"
flat = true

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = -201.0
offset_right = -342.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 11
alignment = 1

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_nslhc")
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_nslhc")
text = "Music"

[node name="SoundFX" type="Label" parent="Audio/HBoxContainer/Labels"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_nslhc")
text = "SoundFX"

[node name="Sliders" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.58
theme_override_constants/separation = 13
alignment = 1

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
texture_filter = 1
layout_mode = 2
value = 75.0

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
texture_filter = 1
layout_mode = 2
value = 75.0

[node name="SoundFX" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
texture_filter = 1
layout_mode = 2
value = 75.0

[node name="VolverAudio" type="Button" parent="Audio"]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 53.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_nslhc")
theme_override_font_sizes/font_size = 60
text = "Volver"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_padof")
volume_db = 10.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Volver" to="." method="_on_volver_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Window" to="." method="_on_window_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="Video/VolverVideo" to="." method="_on_volver_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/SoundFX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/VolverAudio" to="." method="_on_volver_audio_pressed"]
